# taskr

./: .gitignore  .uvpip  Makefile  README.md  com.ingeniator.ctrllord.plist  com.ingeniator.jiraquicktask.plist  ctrllord.py  dmg_settings.py  launch_jira.py  main.py  pyproject.toml
config/: config.toml  config.yaml
playbooks/: hello.yml  jenkins_deploy.yml  prepare_release.yml
playbooks/tools/: config.yaml  jenkins_jobs.example.yaml  jira_release.py  run_jenkins_jobs.py
poc/: tray.py  trigger.py
resources/: generate_jira_task.md  icon.icns
scripts/: patch_spec.py
services/: config.py  jira_service.py  json_service.py  parser.py  playbook_loader.py  playbook_runner.py  task_generator_service.py  task_loader.py  task_queue.py  task_service.py
tests/: test_config.py  test_dashboard.py  test_jira_service.py  test_json_service.py  test_parser.py  test_playbook_dashboard.py  test_playbook_loader.py  test_playbook_runner.py  test_task_generator_service.py  test_task_loader.py  test_task_queue.py
ui/: config.py  dashboard.py  launcher.py  playbook_dashboard.py  styles.py  toast.py  tray.py
