[project]
name = "taskr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dmgbuild>=1.6.5",
    "httpx>=0.28.1",
    "jira>=3.8.0",
    "platformdirs>=4.3.8",
    "pyaml>=25.1.0",
    "pyinstaller>=6.12.0",
    "pynput>=1.8.1",
    "pyobjc>=11.1",
    "pyobjc-core>=11.1",
    "pyobjc-framework-applicationservices>=11.1",
    "pyside6>=6.6.0",
]

[dependency-groups]
dev = [
    "pipdeptree",
    "pytest-custom-report>=1.0.1",
]
