[project]
name = "taskr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jira>=3.8.0",
    "platformdirs>=4.3.8",
    "pyaml>=25.1.0",
    "pynput>=1.8.1",
    "pyside6>=6.6.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "dmgbuild>=1.6.5",
    "pipdeptree",
    "pytest-custom-report>=1.0.1",
]
