[project]
name = "taskr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atlassian-python-api>=4.0.4",
    "httpx>=0.28.1",
    "platformdirs>=4.3.8",
    "pynput>=1.8.1",
    "pyside6>=6.6.0",
    "toml>=0.10.2",
]

[project.scripts]
ctrllord = "ctrllord:main"

[tool.setuptools]
py-modules = ["ctrllord"]
packages = ["services", "ui"]

[dependency-groups]
dev = [
    "pipdeptree",
    "pytest>=8.0",
    "pytest-custom-report>=1.0.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
